--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 
 @theme {
     --font-display: "Poppins", "sans-serif";
-    --breakpoint-3xl 1920px;
+    --breakpoint-3xl: 1920px;
     --color-primary: #1368EC
 }
 
